add @value on field and file aplication.properties